monkey patch new jayson client good for browsers

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "commander": "^2.19.0",
     "fs-extra": "^7.0.1",
     "is-url": "^1.2.4",
-    "jayson": "^2.1.2",
+    "isomorphic-fetch": "^2.2.1",
+    "jayson": "github:zcstarr/jayson",
     "jest": "^24.5.0",
     "json-schema-to-typescript": "^6.1.3",
     "lodash": "^4.17.11",
