--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@open-rpc/schema-utils-js": "file:open-rpc-schema-utils-js-0.0.0-semantic-release-dev.tgz",
+    "@open-rpc/schema-utils-js": "^1.0.4",
     "commander": "^2.19.0",
     "fs-extra": "^7.0.1",
     "lodash": "^4.17.11"
